# opinion-system

./: .gitignore  AGENTS.md  AI_API_GUIDE.md  API调用文档.md  BERTopic数据流集成文档.md  CHANGELOG.md  CLAUDE.md  DATA_STORAGE.md  RAG_3MONTH_IMPROVEMENT_PLAN.md  RAG_ENHANCEMENT_PLAN.md  RAG_INTEGRATION_BLUEPRINT.md  README.md  SERVER_API.md  TODO.md  config.yaml  db_structure.txt  debug_auth_output.txt  langgraph.json  pyproject.toml  requirements.txt  run.py  start_mac.sh  start_win.bat  tatus
.agent/rules/: opinion-system-guide.md
.agent/workflows/: setup-cuda.md
.cursor/: rules.mdc
.langgraph_api/: .langgraph_ops.pckl
.tmp_pytest/exploration-runtime/: report_payload.json
backend/: 20251201_output.txt  langgraph.json  langgraph_server.py  main.py  rebuild_graph.py  requirements.txt  run_full_sync.py  server.py  test_bertopic_import.py  test_embedding_config.py  test_minimal_import.py  test_server_import.py  update_schema.py
backend/configs/: analysis.yaml  bertopic.json  channels.yaml  chart_aliases.yaml  explain.yaml  llm.yaml  (+3 more)
configs/: databases.yaml  llm.yaml
docs/: HOW_THREE_RAG_COMBINED.md  RERANKER_EXPLANATION.md  RRF_IMPLEMENTATION.md  WHY_BM25_WITH_EMBEDDING.md  frontend-backend-db-call-flow.md  postgresql-migration-guide.md  remote-database-sql-usage.md
frontend/: .env.local  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
scripts/: check_env.py  debug_auth_flow.py  deep_inspect.py  inspect_structure.py  rerun_verify.py  test_db_utils.py  test_delete_db.py  test_import.py  test_postgres_driver.py  verify_db_query.py
(+676 files in other folders)
