[project]
name = "opinion-system"
version = "0.1.0"
description = "Opinion System Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.0",
    "dashscope>=1.14.0",
    "openai>=1.14.0",
    "tiktoken>=0.5.2",
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "aiohttp",
    "pyarrow",
    "lancedb>=0.6.0",
    "pypinyin>=0.50.0",
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.5",
    "bertopic>=0.16.0",
    "colorama>=0.4.6",
    "pyecharts>=2.0.0",
    "jieba>=0.42.1",
    "wordcloud>=1.9.2",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "scikit-learn>=1.3.0",
    "Flask>=2.3.0",
    "flask-cors>=4.0.0",
    "python-docx>=1.0.0",
    "psycopg2-binary>=2.9.0",
]

# Note: PyTorch with CUDA 11.8 must be installed manually after uv sync.
# Run: uv pip install --force-reinstall torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
# See .agent/workflows/setup-cuda.md for details
